Resolves image overflow issue on mobile

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -13,6 +13,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+body * {
+  box-sizing: border-box;
+}
+
 h1, h2, h3 {
   line-height: 1.2;
   margin-top: 0;
@@ -22,6 +26,7 @@ h1, h2, h3 {
   text-align: center;
 }
 
-body * {
-  box-sizing: border-box;
+img {
+  height: auto;
+  max-width: 100%;
 }
